--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -38,9 +38,7 @@ wintypes:
 		};
 };
 
-opacity-rule = [
-    "89:class_g = 'Rofi'",
-];
+opacity-rule = [ "89:class_g = 'Rofi'" ];
 
 shadow = true;
 shadow-radius = 12;
